updated with loading gif and updated book.js file by James

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <body>
 
+    <div id="preloader"></div>
+
     <aside class="sans">
         <a href="#">BookClub</a>
     </aside>
@@ -66,7 +68,7 @@
         <div class="wrapper">
             <div class="footerInfo">
                 <div class="about">
-                    <p><em>Guts</em> is a short story written by <a href="http://chuckpalahniuk.net/">Chuck Palahniuk</a>, please visit his website for more writing or buy his books. This page is for demonstration purposes only. <em>BookClub</em> is an experiment in long form reading and typography in the browser by <a href="http://andychung.ca">Andy Chung</a>.</p>
+                    <p><em><a href="http://chuckpalahniuk.net/features/shorts/guts">Guts</a></em> is a short story written by <a href="http://chuckpalahniuk.net/">Chuck Palahniuk</a>. <em><a href="https://github.com/andychung/BookClub">BookClub</a></em> is an experiment in long form reading and typography in the browser by <a href="http://andychung.ca">Andy Chung</a> with the imperative help of <a href="http://tagneto.blogspot.com">James Burke</a>.</p>
 
                     <p>Cover image by <a href="http://en.wikipedia.org/wiki/David_Hockney">David Hockney</a>.</p>
                 </div>
